add useful HashMap demo